kasten-cel/k10-hourly-rpo/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-policy-hourly-rpo
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
