kasten-cel/k10-hourly-rpo/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: k10-hourly-rpo
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../k10-hourly-rpo.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: k10-policy-hourly-rpo
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
    - assert:
        file: crd-assert.yaml
  - name: step-02
    try:
    - apply:
        file: k10-good-policy.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: k10-bad-policy.yaml
